--- a/package.json
+++ b/package.json
@@ -9,17 +9,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "logfmt": "^1.1.2",
-    "coffee-script": "1.1.2",
     "body-parser": "^1.0.2",
+    "coffee-script": "1.1.2",
     "connect-busboy": "0.0.1",
+    "easyimage": "^1.0.2",
     "error-handler": "^0.1.4",
     "express": "~4.1.1",
     "imagemagick": "^0.1.3",
     "jade": "~0.31.2",
+    "logfmt": "^1.1.2",
     "method-override": "^1.0.0",
     "mongoose": "~3.6.2",
-    "morgan": "^1.0.0"
+    "morgan": "^1.0.0",
+    "node-minify": "^0.10.5",
+    "node-sass": "^0.9.3"
   },
   "engines": {
     "node": "0.10.x"
